# automa-aoNutriDeby

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  campanha_deepseek_db.py  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  docker-compose.yml.bak  enviar_whatsapp.py  extrai_paciente.py  gerar_csv_teste.py  importa_csv_completo.py  importa_csv_db.py  pacientes.csv  pyproject.toml  requirements.txt  salvar_csv.py  test_login_dietbox.py  test_sqli_nutrideby.py  test_twilio.py
.claude/: settings.json
.openclaw/: workspace-state.json
dashboard/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
data/: exemplo_import.json  pacientes.csv  pacientes.db  pacientes_export_template.csv  pacientes_teste.csv  taco_correlacionado.json  taco_kb.jsonl  taco_kb_final.jsonl
docs/: 01-visao-geral.md  02-arquitetura.md  03-deploy-manutencao.md  04-api-reference.md  05-dashboard.md  06-roadmap-saas.md  DEPLOY.md  PLANO-NEGOCIO-E-SPRINTS.md  PROMPT_VENDEDORA.md  README.md  checklist-mvp-e-endpoints.md  decisao-embeddings-vector-store.md  estrategia-dietbox-e-api-propria.md  estrategia_plg_nutrideby.md  execucao-plano-integracao.md  higiene-git-e-repositorio.md  monitorizacao-smoke-cron.md  operacao-git-docker-servidor.md  pesquisa_modelo_chines_saas_saude.md  regras-negocio-jornada-telemetria.md  replicacao-dietbox-para-api-propria.md  sequencia-planos-abc-mvp.md  sprint-user-stories.md  tipos-documentos-doc-type.md  (+1 more)
(+202 files in other folders)
