[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrideby"
version = "0.1.0"
description = "Pipeline CRM (Datebox) → armazenamento → FAISS → DeepSeek para campanhas nutricionais"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "opensearch-py>=2.4.0",
    "playwright==1.58.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "selenium>=4.15.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
